--- a/app/src/scss/common.scss
+++ b/app/src/scss/common.scss
@@ -1,2 +1,21 @@
 body {
 }
+
+nav {
+}
+
+nav img {
+  margin: 8px 0 0 -14px;
+}
+
+.countries {
+  color: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.2);
+  width: 50px;
+  height: 30px;
+  border-radius: 20px;
+  border: red 20px;
+  text-align: right;
+  display: inline-block;
+}
+
