--- a/app/src/scss/common.scss
+++ b/app/src/scss/common.scss
@@ -1,21 +1,176 @@
 body {
+  margin: 0;
+  padding: 0;
 }
 
-nav {
+.toolbar {
+  &__countries {
+    color: #000;
+    background: rgba(0, 0, 0, 0.2);
+    width: 79px;
+    height: 38px;
+    border-radius: 20px;
+    float: right;
+    margin: 37px 30px 0 0;
+  }
+
+  img {
+    margin-top: 17px;
+  }
 }
 
-nav img {
-  margin: 8px 0 0 -14px;
+.phone {
+  display: flex;
+  padding: 44px 0 0 25px;
+
+  &__images {
+    width: 44px;
+    margin: -5px 0 0 -1px;
+
+    img {
+      max-width: 100%;
+      width: 100%;
+    }
+  }
+
+  &__number {
+    padding: 0 0 0 7px;
+    font-weight: 600;
+    letter-spacing: -0.6px;
+  }
 }
 
-.countries {
-  color: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.2);
-  width: 50px;
-  height: 30px;
-  border-radius: 20px;
-  border: red 20px;
-  text-align: right;
-  display: inline-block;
+.links {
+  &__chat {
+    float: left;
+
+    img {
+      height: 15px;
+      width: 20px;
+      margin: 49px 5px 0 -17px;
+    }
+  }
+
+  &__online_chat {
+    font-size: 12px;
+    color: green;
+    letter-spacing: 0.6px;
+    text-decoration: underline;
+    margin: 49px 0 0 8px;
+    display: inline-block;
+  }
+
+  &__advantages {
+    font-size: 12px;
+    letter-spacing: 0.8px;
+    text-decoration: underline;
+    display: inline-block;
+    margin: 41px 0 0 35px;
+  }
+
+  &__support {
+    font-size: 12px;
+    letter-spacing: 0.8px;
+    text-decoration: underline;
+    display: inline-block;
+    margin: 40px 0 0 25px;
+  }
+
+  &__entrance {
+    color: #989797;
+    background: rgba(42, 250, 0, 0.2);
+    width: 95px;
+    height: 28px;
+    border-radius: 20px;
+    float: right;
+    margin: 38px 3px 0 0;
+    padding: 11px 0 0 0;
+    font-size: 14px;
+    text-align: center;
+  }
 }
 
+.free_calls {
+  font-size: 11.3px;
+  letter-spacing: -0.3px;
+  padding: 2px 0 0 10px;
+  float: left;
+}
+
+.dropbtn {
+  padding: 5px;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  height: 100%;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 40px;
+}
+
+.dropbtn {
+  background: url(http://icons.iconarchive.com/icons/custom-icon-design/flag-3/16/Russia-Flag-icon.png) no-repeat 0;
+      background-position-x: 0px;
+      background-position-y: center;
+      background-size: auto;
+  width: 40px;
+  background-position: 15px 7px;
+  height: 100%;
+  background-size: 30px 20px;
+}
+
+.dropbtn::after {
+  background: rgba(0,0,0,0) url(https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_keyboard_arrow_down_48px-16.png) no-repeat scroll 50%;
+  content: "";
+  height: 16px;
+  position: absolute;
+  right: 0;
+  top: 32%;
+width: 37px;
+}
+
+.dropdown-content a:first-child {
+  background: url("http://icons.iconarchive.com/icons/custom-icon-design/flag-3/16/Russia-Flag-icon.png")
+    no-repeat left center;
+}
+
+.dropdown-content a:last-child {
+  background: url("https://icons.iconarchive.com/icons/fatcow/farm-fresh/16/flag-usa-icon.png")
+    no-repeat left center;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 2px 0 2px 25px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.fon_nav {
+  width: 100%;
+  height: auto;
+  padding: 10px 0 0 0;
+}
+
+nav .grid-container,
+nav .grid-100,
+nav .grid-35,
+nav .grid-25,
+nav .grid-40 {
+  padding-left: 0;
+  padding-right: 0;
+}
