--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .no-gutter > [class*='col-'] {
   padding-right: 0;
   padding-left: 0; }
@@ -144,11 +145,6 @@ body {
 .dropdown:hover .dropdown-content {
   display: block; }
 
-.fon_nav {
-  width: 100%;
-  height: auto;
-  padding: 10px 0 0 0; }
-
 nav .grid-container,
 nav .grid-100,
 nav .grid-35,
@@ -156,6 +152,139 @@ nav .grid-25,
 nav .grid-40 {
   padding-left: 0;
   padding-right: 0; }
+
+.soft_bar {
+  position: relative;
+  background: url(/src/img/Слой_6.png) left 50% no-repeat, url(/src/img/bakgraund_fon.png) no-repeat center center;
+  max-width: 100%;
+  width: 100%;
+  height: 553px;
+  margin: 8px 0 0;
+  display: grid; }
+
+/*
+.soft_bar img{
+  height: 10px;
+  width: 10px;
+  display: grid;
+  background-image: 10px;
+}
+*/
+.logo_sherlock {
+  height: 636px;
+  width: 391px;
+  left: 212px;
+  position: absolute;
+  top: 21px; }
+
+.unlimited__hosting {
+  color: #fff;
+  font-size: 43px;
+  display: inline-block;
+  padding: 120px 0 0 220px;
+  text-align: center;
+  display: grid;
+  padding: 115px 0 0 0;
+  font-weight: 600;
+  letter-spacing: -3.9px; }
+
+.unlimited__hosting_one {
+  color: #51ff00;
+  font-size: 43px;
+  float: left;
+  text-align: center;
+  display: grid;
+  font-weight: 600;
+  letter-spacing: -3.9px; }
+
+.unlimited__hosting_two {
+  color: #fff;
+  font-size: 43px;
+  text-align: center;
+  display: grid;
+  font-weight: 600;
+  letter-spacing: -3.9px; }
+
+.unlimited__hosting_three {
+  font-size: 20px;
+  color: #fff; }
+
+.unlimited__services img {
+  height: 50px;
+  width: 50px; }
+
+.order__start {
+  font-size: 50px;
+  color: #fff;
+  position: relative; }
+
+.order__button {
+  position: absolute; }
+
+.capabilities {
+  padding-top: 102px; }
+  .capabilities__sites {
+    height: 78px;
+    display: flex;
+    padding: 0 0 0 0;
+    margin: 0 0 0 -10px; }
+    .capabilities__sites--text {
+      font-size: 20px;
+      padding: 20px 0 0 37px;
+      letter-spacing: -0.3px;
+      font-weight: 600; }
+  .capabilities__koshelek {
+    height: 80px;
+    display: flex;
+    padding: 0 16px 0 21px; }
+    .capabilities__koshelek--text {
+      font-size: 20px;
+      padding: 16px 0 0 28px;
+      letter-spacing: -0.6px;
+      line-height: 29.5px;
+      font-weight: 600; }
+  .capabilities__test {
+    height: 80px;
+    display: flex; }
+    .capabilities__test--text {
+      font-size: 20px;
+      padding: 19px 0 0 28px;
+      letter-spacing: -0.6px;
+      line-height: 29.5px;
+      font-weight: 600;
+      color: green;
+      text-decoration: underline; }
+
+.rate {
+  padding: 123px 0 0 94px;
+  display: block ruby; }
+  .rate__heading {
+    font-size: 40px;
+    letter-spacing: -1.5px;
+    font-weight: normal; }
+  .rate__sherlock_one {
+    padding: 0 0 0 7px;
+    font-size: 35px;
+    color: #4a9400;
+    font-weight: 600;
+    letter-spacing: -2px; }
+  .rate__logo img {
+    height: 62px;
+    padding: 28px 0 0 62px; }
+  .rate__logo {
+    float: left; }
+    .rate__logo--text {
+      padding: 42px 0 0 27px;
+      font-size: 22px; }
+  .rate__logo_one {
+    float: left; }
+    .rate__logo_one--text_right {
+      padding: 42px 0 0 11px;
+      font-size: 22px;
+      letter-spacing: -0.4px; }
+  .rate__logo_one img {
+    height: 70px;
+    padding: 21px 0 0 101px; }
 
 /*Responsive start*/
 /*UltraLarge screens start*/
