--- a/app/src/scss/common.scss
+++ b/app/src/scss/common.scss
@@ -115,10 +115,11 @@ body {
 }
 
 .dropbtn {
-  background: url(http://icons.iconarchive.com/icons/custom-icon-design/flag-3/16/Russia-Flag-icon.png) no-repeat 0;
-      background-position-x: 0px;
-      background-position-y: center;
-      background-size: auto;
+  background: url(http://icons.iconarchive.com/icons/custom-icon-design/flag-3/16/Russia-Flag-icon.png)
+    no-repeat 0;
+  background-position-x: 0px;
+  background-position-y: center;
+  background-size: auto;
   width: 40px;
   background-position: 15px 7px;
   height: 100%;
@@ -126,13 +127,15 @@ body {
 }
 
 .dropbtn::after {
-  background: rgba(0,0,0,0) url(https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_keyboard_arrow_down_48px-16.png) no-repeat scroll 50%;
+  background: rgba(0, 0, 0, 0)
+    url(https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_keyboard_arrow_down_48px-16.png)
+    no-repeat scroll 50%;
   content: "";
   height: 16px;
   position: absolute;
   right: 0;
   top: 32%;
-width: 37px;
+  width: 37px;
 }
 
 .dropdown-content a:first-child {
@@ -160,12 +163,6 @@ width: 37px;
   display: block;
 }
 
-.fon_nav {
-  width: 100%;
-  height: auto;
-  padding: 10px 0 0 0;
-}
-
 nav .grid-container,
 nav .grid-100,
 nav .grid-35,
@@ -173,4 +170,185 @@ nav .grid-25,
 nav .grid-40 {
   padding-left: 0;
   padding-right: 0;
+}
+
+.soft_bar {
+  position: relative;
+  background: url(/src/img/Слой_6.png) left 50% no-repeat,
+    url(/src/img/bakgraund_fon.png) no-repeat center center;
+  max-width: 100%;
+  width: 100%;
+  height: 553px;
+  margin: 8px 0 0;
+  display: grid;
+}
+
+/*
+.soft_bar img{
+  height: 10px;
+  width: 10px;
+  display: grid;
+  background-image: 10px;
+}
+*/
+
+.logo_sherlock {
+  height: 636px;
+  width: 391px;
+  left: 212px;
+  position: absolute;
+  top: 21px;
+}
+
+.unlimited {
+  &__hosting {
+    color: #fff;
+    font-size: 43px;
+    display: inline-block;
+    padding: 120px 0 0 220px;
+    text-align: center;
+    display: grid;
+    padding: 115px 0 0 0;
+    font-weight: 600;
+    letter-spacing: -3.9px;
+  }
+
+  &__hosting_one {
+    color: rgb(81, 255, 0);
+    font-size: 43px;
+    float: left;
+    text-align: center;
+    display: grid;
+    font-weight: 600;
+    letter-spacing: -3.9px;
+  }
+
+  &__hosting_two {
+    color: #fff;
+    font-size: 43px;
+    text-align: center;
+    display: grid;
+    font-weight: 600;
+    letter-spacing: -3.9px;
+  }
+
+  &__hosting_three {
+    font-size: 20px;
+    color: #fff;
+  }
+
+  &__services img {
+    height: 50px;
+    width: 50px;
+  }
+}
+
+.order {
+  &__start {
+    font-size: 50px;
+    color: #fff;
+    position: relative;
+  }
+
+  &__button {
+    position: absolute;
+  }
+
+  &--bottom {
+  }
+}
+
+.capabilities {
+  padding-top: 102px;
+
+  &__sites {
+    height: 78px;
+    display: flex;
+    padding: 0 0 0 0;
+    margin: 0 0 0 -10px;
+
+    &--text {
+      font-size: 20px;
+      padding: 20px 0 0 37px;
+      letter-spacing: -0.3px;
+      font-weight: 600;
+    }
+  }
+
+  &__koshelek {
+    height: 80px;
+    display: flex;
+    padding: 0 16px 0 21px;
+
+    &--text {
+      font-size: 20px;
+      padding: 16px 0 0 28px;
+      letter-spacing: -0.6px;
+      line-height: 29.5px;
+      font-weight: 600;
+    }
+  }
+
+  &__test {
+    height: 80px;
+    display: flex;
+
+    &--text {
+      font-size: 20px;
+      padding: 19px 0 0 28px;
+      letter-spacing: -0.6px;
+      line-height: 29.5px;
+      font-weight: 600;
+      color: green;
+      text-decoration: underline;
+    }
+  }
+}
+
+.rate {
+  padding: 123px 0 0 94px;
+  display: block ruby;
+
+  &__heading {
+    font-size: 40px;
+    letter-spacing: -1.5px;
+    font-weight: normal;
+  }
+
+  &__sherlock_one {
+    padding: 0 0 0 7px;
+    font-size: 35px;
+    color: rgb(74, 148, 0);
+    font-weight: 600;
+    letter-spacing: -2px;
+  }
+
+  &__logo img {
+    height: 62px;
+    padding: 28px 0 0 62px;
+  }
+
+  &__logo {
+    float: left;
+
+    &--text {
+      padding: 42px 0 0 27px;
+      font-size: 22px;
+    }
+  }
+
+  &__logo_one {
+    float: left;
+
+    &--text_right {
+      padding: 42px 0 0 11px;
+      font-size: 22px;
+      letter-spacing: -0.4px;
+    }
+  }
+
+  &__logo_one img {
+    height: 70px;
+    padding: 21px 0 0 101px;
+  }
 }
