--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -160,7 +160,9 @@ nav .grid-40 {
   width: 100%;
   height: 553px;
   margin: 8px 0 0;
-  display: grid; }
+  display: grid;
+  background-size: 378px 640px, cover;
+  background-position: 220px 21px, 0 0; }
 
 /*
 .soft_bar img{
@@ -213,16 +215,92 @@ nav .grid-40 {
   height: 50px;
   width: 50px; }
 
+.features {
+  padding: 0 0 0 10px; }
+
 .order__start {
   font-size: 50px;
   color: #fff;
-  position: relative; }
+  position: relative;
+  display: inline-block;
+  padding: 80px 0 0 61px;
+  letter-spacing: -2.9px;
+  font-weight: normal; }
+  .order__start--r {
+    font-size: 44px;
+    font-weight: 600;
+    display: inline-block;
+    padding: 5px 0 0 61px; }
+  .order__start--99 {
+    font-size: 130px;
+    padding: 0;
+    display: inline-block;
+    font-weight: 600; }
+  .order__start--month {
+    font-size: 27px;
+    padding: 0;
+    margin: 10px 0 0 -12px;
+    display: inline-block; }
+  .order__start--ili {
+    font-size: 25px;
+    color: #fff;
+    padding: 11px 0 0 52px;
+    text-align: center;
+    display: inline-block;
+    justify-content: center;
+    display: flex; }
+  .order__start--button_bottom {
+    color: #fff;
+    display: flex;
+    padding: 2px 0 0 0;
+    font-size: 18px;
+    letter-spacing: -1.5px; }
+  .order__start--button_is_free {
+    font-size: 17px;
+    color: #fff;
+    padding: 0;
+    display: block;
+    text-align: right;
+    font-weight: 600;
+    margin: -21px -1px 0 0;
+    letter-spacing: -1.1px; }
 
 .order__button {
-  position: absolute; }
+  background-color: #ffb84d;
+  color: #fff;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 26px;
+  border-radius: 30px;
+  width: 313px;
+  height: 63px;
+  position: relative;
+  margin: 6px 0 0 38px; }
+  .order__button--bottom {
+    border: none;
+    color: #fff;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 26px;
+    border-radius: 30px;
+    width: 313px;
+    height: 52px;
+    margin: 6px 0 0 38px;
+    background: #cdd6db;
+    margin: 17px 0 0 38px;
+    display: inline-block; }
+
+.order .sherlok16 {
+  position: absolute;
+  bottom: -338px;
+  right: -340px; }
 
 .capabilities {
-  padding-top: 102px; }
+  padding: 103px 0; }
   .capabilities__sites {
     height: 78px;
     display: flex;
@@ -255,36 +333,139 @@ nav .grid-40 {
       color: green;
       text-decoration: underline; }
 
-.rate {
-  padding: 123px 0 0 94px;
-  display: block ruby; }
-  .rate__heading {
-    font-size: 40px;
-    letter-spacing: -1.5px;
-    font-weight: normal; }
-  .rate__sherlock_one {
-    padding: 0 0 0 7px;
-    font-size: 35px;
-    color: #4a9400;
-    font-weight: 600;
-    letter-spacing: -2px; }
-  .rate__logo img {
-    height: 62px;
-    padding: 28px 0 0 62px; }
-  .rate__logo {
-    float: left; }
-    .rate__logo--text {
-      padding: 42px 0 0 27px;
-      font-size: 22px; }
-  .rate__logo_one {
-    float: left; }
-    .rate__logo_one--text_right {
-      padding: 42px 0 0 11px;
-      font-size: 22px;
-      letter-spacing: -0.4px; }
-  .rate__logo_one img {
-    height: 70px;
-    padding: 21px 0 0 101px; }
+.virtual_hosting {
+  background-color: #d4d4d4;
+  width: 100%;
+  height: 223px; }
+
+.OStariffs__headline {
+  padding-left: 94px;
+  font-size: 40px;
+  letter-spacing: -1.5px;
+  font-weight: normal;
+  padding: 52px 0 0 21px;
+  text-align: center;
+  margin: 0; }
+
+.OStariffs__sherlock_one {
+  padding: 0 0 0 7px;
+  font-size: 35px;
+  color: #4a9400;
+  font-weight: 600;
+  letter-spacing: -2px; }
+
+.OStariffs__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none; }
+  .OStariffs__link--linux {
+    padding: 59px 36px 0 0; }
+  .OStariffs__link--windows {
+    padding: 56px 0 0 25px; }
+
+.OStariffs__icon {
+  height: 63px; }
+
+.OStariffs__text {
+  padding: 0 0 4px 31px;
+  color: black;
+  font-size: 21px; }
+  .OStariffs__text--windows {
+    padding: 0 16px 0 17px; }
+
+.offers {
+  padding: 49px 0 0 0;
+  background-color: #d4d4d4;
+  height: 768px;
+  width: 100%; }
+  .offers__list-info {
+    margin: 0;
+    padding: 0; }
+  .offers__buy-button {
+    border: none;
+    color: #050505;
+    padding: 5px 4px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    border-radius: 49px;
+    width: 313px;
+    height: 52px;
+    background: #cdd6db;
+    display: inline-block;
+    margin: 75px 0 0 27px; }
+  .offers__buy-text {
+    padding: 18px 0 0 0;
+    font-size: 18px;
+    color: cadetblue; }
+  .offers__aside {
+    background-color: #e2e2e2;
+    margin: 28px 0 0 0;
+    position: relative; }
+    .offers__aside--functions {
+      color: #666666;
+      font-size: 16px;
+      margin: 0; }
+    .offers__aside--ftraffic {
+      color: #666666;
+      padding: 0 0 0 30px;
+      margin: 0; }
+  .offers__block-info {
+    list-style-type: none;
+    position: relative;
+    border-bottom: 2px solid #4a4a4a;
+    padding: 22px 0 0 52px; }
+    .offers__block-info::before, .offers__block-info::after {
+      position: absolute;
+      width: 3px;
+      height: 9px;
+      background-color: #5fb300;
+      left: -8px;
+      top: 6px;
+      content: "";
+      transform: rotate(45deg); }
+    .offers__block-info::after {
+      height: 3px;
+      left: -12px;
+      top: 9px; }
+  .offers .images_sherlosk {
+    position: absolute;
+    left: -527px;
+    bottom: -127px; }
+  .offers .images_sherlosk img {
+    height: 365px; }
+  .offers__centr {
+    background-color: #e7e7e7;
+    height: 723px; }
+  .offers__header {
+    color: #000;
+    font-size: 34px;
+    text-align: center;
+    display: grid;
+    padding: 29px 0 0 0;
+    letter-spacing: -5px; }
+    .offers__header--max {
+      padding: 29px 22px 0 0; }
+  .offers__body {
+    text-align: center;
+    color: #000;
+    font-size: 13px;
+    padding: 17px 0 0 17px;
+    display: grid;
+    letter-spacing: -0.6px; }
+  .offers__price {
+    background-color: #ccc;
+    margin: 21px 20px 0 25px;
+    border-radius: 6px;
+    text-align: center;
+    padding: 10px 0 17px 0; }
+    .offers__price__ruble {
+      padding: 28px 11px 0 0;
+      display: inline-block;
+      font-size: 20px; }
+  .offers__quantity {
+    font-size: 35px; }
 
 /*Responsive start*/
 /*UltraLarge screens start*/
