--- a/app/src/scss/common.scss
+++ b/app/src/scss/common.scss
@@ -181,6 +181,8 @@ nav .grid-40 {
   height: 553px;
   margin: 8px 0 0;
   display: grid;
+  background-size: 378px 640px, cover;
+  background-position: 220px 21px, 0 0;
 }
 
 /*
@@ -243,23 +245,112 @@ nav .grid-40 {
   }
 }
 
+.features {
+  padding: 0 0 0 10px;
+}
+
 .order {
   &__start {
     font-size: 50px;
     color: #fff;
     position: relative;
+    display: inline-block;
+    padding: 80px 0 0 61px;
+    letter-spacing: -2.9px;
+    font-weight: normal;
+
+    &--r {
+      font-size: 44px;
+      font-weight: 600;
+      display: inline-block;
+      padding: 5px 0 0 61px;
+    }
+
+    &--99 {
+      font-size: 130px;
+      padding: 0;
+      display: inline-block;
+      font-weight: 600;
+    }
+
+    &--month {
+      font-size: 27px;
+      padding: 0;
+      margin: 10px 0 0 -12px;
+      display: inline-block;
+    }
+
+    &--ili {
+      font-size: 25px;
+      color: #fff;
+      padding: 11px 0 0 52px;
+      text-align: center;
+      display: inline-block;
+      justify-content: center;
+      display: flex;
+    }
+
+    &--button_bottom {
+      color: #fff;
+      display: flex;
+      padding: 2px 0 0 0;
+      font-size: 18px;
+      letter-spacing: -1.5px;
+    }
+
+    &--button_is_free {
+      font-size: 17px;
+      color: #fff;
+      padding: 0;
+      display: block;
+      text-align: right;
+      font-weight: 600;
+      margin: -21px -1px 0 0;
+      letter-spacing: -1.1px;
+    }
   }
 
   &__button {
-    position: absolute;
+    background-color: #ffb84d;
+    color: #fff;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 26px;
+    border-radius: 30px;
+    width: 313px;
+    height: 63px;
+    position: relative;
+    margin: 6px 0 0 38px;
+
+    &--bottom {
+      border: none;
+      color: #fff;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 26px;
+      border-radius: 30px;
+      width: 313px;
+      height: 52px;
+      margin: 6px 0 0 38px;
+      background: #cdd6db;
+      margin: 17px 0 0 38px;
+      display: inline-block;
+    }
   }
 
-  &--bottom {
+  .sherlok16 {
+    position: absolute;
+    bottom: -338px;
+    right: -340px;
   }
 }
 
 .capabilities {
-  padding-top: 102px;
+  padding: 103px 0;
 
   &__sites {
     height: 78px;
@@ -305,14 +396,21 @@ nav .grid-40 {
   }
 }
 
-.rate {
-  padding: 123px 0 0 94px;
-  display: block ruby;
+.virtual_hosting {
+  background-color: rgb(212, 212, 212);
+  width: 100%;
+  height: 223px;
+}
 
-  &__heading {
+.OStariffs {
+  &__headline {
+    padding-left: 94px;
     font-size: 40px;
     letter-spacing: -1.5px;
     font-weight: normal;
+    padding: 52px 0 0 21px;
+    text-align: center;
+    margin: 0;
   }
 
   &__sherlock_one {
@@ -323,32 +421,163 @@ nav .grid-40 {
     letter-spacing: -2px;
   }
 
-  &__logo img {
-    height: 62px;
-    padding: 28px 0 0 62px;
-  }
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
 
-  &__logo {
-    float: left;
+    &--linux {
+      padding: 59px 36px 0 0;
+    }
 
-    &--text {
-      padding: 42px 0 0 27px;
-      font-size: 22px;
+    &--windows {
+      padding: 56px 0 0 25px;
     }
   }
 
-  &__logo_one {
-    float: left;
+  &__icon {
+    height: 63px;
+  }
 
-    &--text_right {
-      padding: 42px 0 0 11px;
-      font-size: 22px;
-      letter-spacing: -0.4px;
+  &__text {
+    padding: 0 0 4px 31px;
+    color: black;
+    font-size: 21px;
+
+    &--windows {
+      padding: 0 16px 0 17px;
+    }
+  }
+}
+
+.offers {
+  padding: 49px 0 0 0;
+  background-color: #d4d4d4;
+  height: 768px;
+  width: 100%;
+
+  &__list-info {
+    margin: 0;
+    padding: 0;
+  }
+
+  &__buy-button {
+    border: none;
+    color: #050505;
+    padding: 5px 4px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    border-radius: 49px;
+    width: 313px;
+    height: 52px;
+    background: #cdd6db;
+    display: inline-block;
+    margin: 75px 0 0 27px;
+  }
+
+  &__buy-text {
+    padding: 18px 0 0 0;
+    font-size: 18px;
+    color: cadetblue;
+  }
+
+  &__aside {
+    background-color: #e2e2e2;
+    margin: 28px 0 0 0;
+    position: relative;
+
+    &--functions {
+      color: rgb(102, 102, 102);
+      font-size: 16px;
+      margin: 0;
+    }
+
+    &--ftraffic {
+      color: rgb(102, 102, 102);
+      padding: 0 0 0 30px;
+      margin: 0;
     }
   }
 
-  &__logo_one img {
-    height: 70px;
-    padding: 21px 0 0 101px;
+  &__block-info {
+    list-style-type: none;
+    position: relative;
+    border-bottom: 2px solid #4a4a4a;
+    padding: 22px 0 0 52px;
+
+    &::before,
+    &::after {
+      position: absolute;
+      width: 3px;
+      height: 9px;
+      background-color: rgb(95, 179, 0);
+      left: -8px;
+      top: 6px;
+      content: "";
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      height: 3px;
+      left: -12px;
+      top: 9px;
+    }
+  }
+
+  .images_sherlosk {
+    position: absolute;
+    left: -527px;
+    bottom: -127px
+  }
+
+  .images_sherlosk img {
+    height: 365px;
+  }
+
+  &__centr {
+    background-color: #e7e7e7;
+    height: 723px;
+  }
+
+  &__header {
+    color: #000;
+    font-size: 34px;
+    text-align: center;
+    display: grid;
+    padding: 29px 0 0 0;
+    letter-spacing: -5px;
+
+    &--max {
+      padding: 29px 22px 0 0;
+    }
+  }
+
+  &__body {
+    text-align: center;
+    color: #000;
+    font-size: 13px;
+    padding: 17px 0 0 17px;
+    display: grid;
+    letter-spacing: -0.6px;
+  }
+
+  &__price {
+    background-color: #ccc;
+    margin: 21px 20px 0 25px;
+    border-radius: 6px;
+    text-align: center;
+    padding: 10px 0 17px 0;
+
+    &__ruble {
+      padding: 28px 11px 0 0;
+      display: inline-block;
+      font-size: 20px;
+    }
+  }
+
+  &__quantity {
+    font-size: 35px;
   }
 }
