--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -345,7 +345,7 @@ nav .grid-40 {
 .OStariffs__sherlock_one {
   padding: 0 0 0 7px;
   font-size: 35px;
-  color: #4a9400;
+  color: #97b254;
   font-weight: 600;
   letter-spacing: -2px; }
 
@@ -369,11 +369,43 @@ nav .grid-40 {
   .OStariffs__text--windows {
     padding: 0 16px 0 17px; }
 
+.offers {
+  position: relative; }
+  .offers__social {
+    position: absolute;
+    right: -293px;
+    top: 69px; }
+    .offers__social-link {
+      display: block;
+      border-radius: 50%;
+      overflow: hidden;
+      margin: 7px; }
+    .offers__social-circle {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 40px;
+      height: 40px; }
+      .offers__social-circle--vk {
+        background-color: #5b7fa6; }
+      .offers__social-circle--fb {
+        background-color: #415a99; }
+      .offers__social-circle--ok {
+        background-color: #f38104; }
+      .offers__social-circle--tw {
+        background-color: #00caff; }
+      .offers__social-circle--pencil {
+        background-color: #97b254; }
+    .offers__social-icon {
+      width: 50%;
+      max-width: 100%;
+      height: 50%; }
+
 .offer {
   margin: 77px 0 0 0;
-  background-color: #d4d4d4;
-  height: 768px;
-  width: 100%; }
+  background-color: #f2f1f1;
+  width: 100%;
+  padding: 0 0 24px 0; }
   .offer__body {
     text-align: center;
     color: #000;
@@ -388,8 +420,15 @@ nav .grid-40 {
     display: grid;
     padding: 29px 0 0 0;
     letter-spacing: -5px;
-    border-top: 2px solid #01f;
+    border-top: 2px solid #7ca3cc;
     border-radius: 8px; }
+    .offer__header--pro {
+      border-top: 4px solid #97b254;
+      font-size: 59px;
+      padding: 26px 9px 0 0; }
+    .offer__header--right {
+      border-top: 2px solid #f9a900;
+      padding: 26px 18px 0 0; }
   .offer__buy-button {
     border: none;
     color: #050505;
@@ -400,13 +439,23 @@ nav .grid-40 {
     border-radius: 49px;
     width: 313px;
     height: 52px;
-    background: #cdd6db;
+    border: 2px solid #cdd6db;
     display: inline-block;
     margin: 54px 0 0 27px; }
+    .offer__buy-button--centr {
+      background: #97b254; }
+    .offer__buy-button--right {
+      border: 2px solid #f9a900;
+      margin: 13px 0 0 15px; }
   .offer__buy-text {
     padding: 15px 0 0;
     font-size: 18px;
     color: cadetblue; }
+    .offer__buy-text--centr {
+      color: #e2e2e2;
+      padding: 19px 23px 0 0; }
+    .offer__buy-text--right {
+      color: #f9a900; }
   .offer__ili {
     font-size: 15px;
     color: #4e4e4e;
@@ -420,16 +469,16 @@ nav .grid-40 {
   .offer .images_sherlosk {
     position: absolute;
     left: -527px;
-    bottom: -9px; }
+    bottom: -82px; }
   .offer .images_sherlosk img {
     height: 365px; }
   .offer__centr {
-    background-color: #e7e7e7; }
+    background-color: #f4f4f4; }
   .offer__text-block {
     text-align: center;
     display: flex;
     font-size: 14px;
-    color: cornflowerblue;
+    color: 7ca3cc;
     padding: 14px 0 0 59px; }
   .offer__price {
     background-color: #ccc;
@@ -450,6 +499,11 @@ nav .grid-40 {
       padding: 0;
       margin: 0;
       display: inline-block; }
+    .offer__price--centr {
+      background-color: #97b254;
+      margin: 15px 26px 0 22px; }
+    .offer__price--right {
+      margin: 22px 32px 0 15px; }
   .offer__list-info {
     margin: 18px 20px;
     padding: 0; }
@@ -463,7 +517,7 @@ nav .grid-40 {
       position: absolute;
       width: 3px;
       height: 9px;
-      background-color: #5fb300;
+      background-color: #97b254;
       left: 15px;
       top: 50%;
       content: "";
@@ -490,6 +544,12 @@ nav .grid-40 {
     margin: 0;
     padding: 4px 14px 0 0;
     font-size: 14.7px; }
+  .offer__centr {
+    margin: 50px 0 0 0;
+    padding: 0 0 24px;
+    -webkit-box-shadow: 0 7px 21px -3px #97b254;
+    -moz-box-shadow: 0 7px 21px -3px #97b254;
+    box-shadow: 0 7px 21px -3px #97b254; }
 
 /*Responsive start*/
 /*UltraLarge screens start*/
