--- a/app/src/scss/common.scss
+++ b/app/src/scss/common.scss
@@ -706,3 +706,127 @@ nav .grid-40 {
     box-shadow: 0 7px 21px -3px #97b254;
   }
 }
+
+.optimized-platform {
+  h3 {
+    font-size: 40px;
+    letter-spacing: -4.2px;
+  }
+
+  .row {
+    padding: 64px 0 0 150px;
+    display: inline-block;
+    text-align: center;
+
+    &__bottom {
+      color: rgb(0, 0, 0);
+      text-align: center;
+      display: block;
+      padding: 36px 5px 0 0;
+      letter-spacing: -0.5px;
+    }
+  }
+
+  &__modx {
+    height: 100px;
+    width: 250px;
+    margin: 15px 0 0 -20px;
+  }
+
+  &__bitrix {
+    height: 55px;
+    width: 285px;
+    padding: 39px 0 0 3px;
+  }
+
+  &__presta {
+    height: 71px;
+    width: 300px;
+    padding: 30px 0 0 44px;
+  }
+
+  &__dle {
+    height: 91px;
+    width: 200px;
+    padding: 32px 0 0 95px;
+  }
+
+  &__umicms {
+    height: 91px;
+    width: 275px;
+    margin: 20px 0 0 -21px;
+  }
+
+  &__openkart {
+    height: 52px;
+    width: 265px;
+    padding: 41px 0 0 60px;
+  }
+
+  &__netcat {
+    height: 91px;
+    width: 115px;
+    padding: 21px 0 0 122px;
+  }
+
+  &__drupal {
+    height: 95px;
+    width: 111px;
+    padding: 20px 0 0 97px;
+  }
+
+  &__joomla {
+    height: 99px;
+    width: 144px;
+    padding: 15px 0 0 38px;
+  }
+
+  &__wordpress {
+    height: 100px;
+    padding: 16px 0 0 19px;
+  }
+}
+
+.advantage {
+  position: relative;
+  background: url(/src/img/fon23.png) no-repeat center center;
+  max-width: 100%;
+  width: 100%;
+  margin: 36px 0 0;
+  padding: 27px 0 40px 0;
+
+  h4 {
+    color: #fff;
+    font-size: 35px;
+    text-align: center;
+    letter-spacing: -1px;
+  }
+
+  &__link {
+
+  }
+
+  &__functions-img {
+    
+  }
+
+  &__img-container {
+    display: flex;
+    justify-content: center;
+    padding: 22px 0 0 0;
+  }
+
+
+  &__name {
+    font-size: 20px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    display: inline-block;
+
+    &--bottom {
+      font-size: 13px;
+      color: #ffffff;
+      padding: 18px 0 0 0;
+    }
+  }
+}
